--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                 <div class="menu-item"><a data-menuanchor="section4" href="#section4">Contact</a></div>
     </nav>
     <div class="container-fluid" id="fullpage">
-        <section class="intro section" id="#section1">          
+        <section class="intro section " id="#section1">         
                 <h1 >Hi I'm Çlirim Ajeti</h1>
-                <h3>this is my Portfolio</h3>
-                <img src="./img/iconfinder_basics-08_296826.svg" alt="" class="arrow">
+                <h3 class="desc">this is my Portfolio</h3>
+               <a href="#section2"><img src="./img/iconfinder_basics-08_296826.svg" alt="" class="arrow"></a>
         </section>
         <section class="skills section">
             <div class="row">
@@ -179,14 +179,29 @@
 
 
         <section class="contact section">
-            <h1>Please Contact me!</h1>
+            <h1 class="contact-me">Contact</h1>
+            <p class="myEmail"><a href="mailto:clirimajeti@gmail.com">clirimajeti@gmail.com</a></p>
+            <div class="row d-flex justify-content-center">
+                <div class=" col-md-3 text-center social">
+                    <a href="https://github.com/clirimajeti" class="social-link"><i class="fab fa-github"></i></a>
+                </div>
+                <div class=" col-md-3 text-center social">
+                    <a href="https://www.linkedin.com/in/%C3%A7lirim-ajeti/" class="social-link"><i class="fab fa-linkedin-in"></i></a>
+                </div>   
+                <div class=" col-md-3 text-center social">    
+                    <a href="https://codepen.io/clirimajeti/" class="social-link"><i class="fab fa-codepen"></i></a>
+                </div>    
+            </div>
         </section>
         <footer>
 
         </footer> 
     </div>
+    <script src="./libs/jquery/dist/jquery.min.js"></script>
     <script src="./libs/fullpage.js/dist/fullpage.min.js"></script>
     <script src="./libs/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="./libs/covervid.min.js"></script>
+
     <script>
         new fullpage('#fullpage', {
                 autoScrolling:true,
