--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="./libs/@fortawesome/fontawesome-free/css/all.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./libs/fullpage.js/dist/fullpage.min.css">
+    <link rel="apple-touch-icon" sizes="152x152" href=".img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon/android-chrome-144x144.png">
+    <link rel="icon" type="image/png" sizes="16x16" href=".img/favicon/favicon-16x16.png">
+    
     <title>ÇA Portfolio</title>
 </head>
 <body>
