--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 </head>
 <body>
-        <nav id="menu">
+        <nav id="menu" class="container">
                     <div class="menu-item"><a data-menuanchor="section1" href="#section1">Home</a></div>
                     <div class="menu-item"><a data-menuanchor="section2" href="#section2">Skills</a></div>
                     <div class="menu-item"><a data-menuanchor="section3" href="#section3">Projects</a></div>
