--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
 
 </head>
 <body>
-        <nav id="menu" class="container">
+    <header class="container">
+        <nav id="menu" >
                     <div class="menu-item"><a data-menuanchor="section1" href="#section1">Home</a></div>
                     <div class="menu-item"><a data-menuanchor="section2" href="#section2">Skills</a></div>
                     <div class="menu-item"><a data-menuanchor="section3" href="#section3">Projects</a></div>
                     <div class="menu-item"><a data-menuanchor="section4" href="#section4">Contact</a></div>
                     <div class="toggle"><div class="ball"></div></div>     
         </nav> 
-
+    </header>        
     <div class="container" id="fullpage">
         <section class="intro section " id="#section1">         
                 <h1 >Hi I'm Çlirim Ajeti</h1>
