--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Hi, I'm Clirim Ajeti and this is my Front-end Portfolio.
+                                Here you can see my skills, a few projects and my Contact infromation">
+    <meta name="keywords" content="HTML,CSS,XML,JavaScript,Portfolio,Front-end,github,skills,projects,clirimajeti">
+    <meta name="author" content="Clirim Ajeti">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./libs/bootstrap/dist/css/bootstrap.min.css">
@@ -225,7 +229,7 @@
 
         <section class="contact section">
             <div class="row">
-                <div class="col-md-12"><h1 class="contact-me">Contact</h1></div> 
+                <div class="col-md-12"><h2 class="contact-me">Contact</h2></div> 
                 <div class="col-md-12"><a class="myEmail" href="mailto:clirimajeti@gmail.com">clirimajeti@gmail.com</a></div>
             </div>
             
