--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <meta name="keywords" content="HTML,CSS,XML,JavaScript,Portfolio,Front-end,github,skills,projects,clirimajeti">
     <meta name="author" content="Clirim Ajeti">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preload" href="./libs/fullpage.js/dist/fullpage.min.css" as="style">
+    <link rel=preload href="./libs/@fortawesome/fontawesome-free/css/all.css" as="style">
     <link rel="stylesheet" href="./libs/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./libs/@fortawesome/fontawesome-free/css/all.css">
     <link rel="stylesheet" href="./css/main.css">
