--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="keywords" content="HTML,CSS,XML,JavaScript,Portfolio,Front-end,github,skills,projects,clirimajeti">
     <meta name="author" content="Clirim Ajeti">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="preload" href="./css/main.css" as="style">
     <link rel="preload" href="./libs/fullpage.js/dist/fullpage.min.css" as="style">
     <link rel=preload href="./libs/@fortawesome/fontawesome-free/css/all.css" as="style">
     <link rel="stylesheet" href="./libs/bootstrap/dist/css/bootstrap.min.css">
@@ -18,96 +18,93 @@
     <link rel="apple-touch-icon" sizes="152x152" href=".img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon/android-chrome-144x144.png">
     <link rel="icon" type="image/png" sizes="16x16" href=".img/favicon/favicon-16x16.png">
-    
     <title>ÇA Portfolio</title>
-
-
 </head>
 <body>
     <header class="container">
         <nav id="menu" >
-                    <div class="menu-item"><a data-menuanchor="section1" href="#section1">Home</a></div>
-                    <div class="menu-item"><a data-menuanchor="section2" href="#section2">Skills</a></div>
-                    <div class="menu-item"><a data-menuanchor="section3" href="#section3">Projects</a></div>
-                    <div class="menu-item"><a data-menuanchor="section4" href="#section4">Contact</a></div>
-                    <div class="toggle"><div class="ball"></div></div>     
+            <div class="menu-item"><a data-menuanchor="section1" href="#section1">Home</a></div>
+            <div class="menu-item"><a data-menuanchor="section2" href="#section2">Skills</a></div>
+            <div class="menu-item"><a data-menuanchor="section3" href="#section3">Projects</a></div>
+            <div class="menu-item"><a data-menuanchor="section4" href="#section4">Contact</a></div>
+            <div class="toggle"><div class="ball"></div></div>     
         </nav> 
     </header>        
     <div class="container" id="fullpage">
         <section class="intro section " id="#section1">         
-                <h1 >Hi I'm Çlirim Ajeti</h1>
-                <h3 class="desc">this is my Portfolio</h3>
-               <a href="#section2"><img src="./img/iconfinder_basics-08_296826.svg" alt="" class="arrow"></a>
+            <h1 >Hi I'm Çlirim Ajeti</h1>
+            <h3 class="desc">this is my Portfolio</h3>
+            <a href="#section2"><img src="./img/iconfinder_basics-08_296826.svg" alt="" class="arrow"></a>
         </section>
         <section class="skills section">
             <div class="row">
-                    <div class="col-md-4">
-                        <h3>Programming</h3>
-                            <p class="prog-skill">HTML5</p>
-                                <div class="progress" style="height: 25px;">
-                                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
-                                </div>
-                            <p class="prog-skill">CSS3</p>
-                                <div class="progress" style="height: 25px;">
-                                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
-                                </div>
-                            <p class="prog-skill">Javascript</p>
-                                <div class="progress" style="height: 25px;">
-                                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
-                                </div>
-                            <p class="prog-skill">NodeJS</p>
-                                <div class="progress" style="height: 25px;">
-                                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 50%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">50%</div>
-                                </div>
-                            <p class="prog-skill">Php</p>
-                                <div class="progress" style="height: 25px;">
-                                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 40%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">40%</div>
-                                </div>
-                    </div>
-                    <div class="col-md-4">
-                        <h3>Frameworks&Libraries</h3>
-                            <p class="prog-skill">AngularJS</p>
-                                <div class="progress" style="height: 25px;">
-                                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 70%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">70%</div>
-                                </div>
-                            <p class="prog-skill">Bootstrap</p>
-                                <div class="progress" style="height: 25px;">
-                                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 70%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">70%</div>
-                                </div>
-                            <p class="prog-skill">Sass</p>
-                                <div class="progress" style="height: 25px;">
-                                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 60%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">60%</div>
-                                </div>
-                            <p class="prog-skill">Pug (Jade)</p>
-                                <div class="progress" style="height: 25px;">
-                                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 50%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">60%</div>
-                                </div>
-                            <p class="prog-skill">ExpressJs</p>
-                                <div class="progress" style="height: 25px;">
-                                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 40%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">40%</div>
-                                </div>
-                    </div>
-                    <div class="col-md-4">
-                        <h3>Others</h3>
-                            <p class="prog-skill">Agile Methodology</p>
-                                <div class="progress" style="height: 25px;">
-                                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 80%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">80%</div>
-                                </div>
-                            <p class="prog-skill">Scrum</p>
-                                <div class="progress" style="height: 25px;">
-                                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 70%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">70%</div>
-                                </div>
-                            <p class="prog-skill">Business Analyst</p>
-                                <div class="progress" style="height: 25px;">
-                                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 90%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">90%</div>
-                                </div>
-                            <p class="prog-skill">Git</p>
-                                <div class="progress" style="height: 25px;">
-                                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 90%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">90%</div>
-                                </div>
-                    </div>
+                <div class="col-md-4">
+                    <h3>Programming</h3>
+                        <p class="prog-skill">HTML5</p>
+                            <div class="progress" style="height: 25px;">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
+                            </div>
+                        <p class="prog-skill">CSS3</p>
+                            <div class="progress" style="height: 25px;">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
+                            </div>
+                        <p class="prog-skill">Javascript</p>
+                            <div class="progress" style="height: 25px;">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">80%</div>
+                            </div>
+                        <p class="prog-skill">NodeJS</p>
+                            <div class="progress" style="height: 25px;">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 50%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">50%</div>
+                            </div>
+                        <p class="prog-skill">Php</p>
+                            <div class="progress" style="height: 25px;">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 40%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">40%</div>
+                            </div>
                 </div>
-            </section>
+                <div class="col-md-4">
+                    <h3>Frameworks&Libraries</h3>
+                        <p class="prog-skill">AngularJS</p>
+                            <div class="progress" style="height: 25px;">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 70%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">70%</div>
+                            </div>
+                        <p class="prog-skill">Bootstrap</p>
+                            <div class="progress" style="height: 25px;">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 70%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">70%</div>
+                            </div>
+                        <p class="prog-skill">Sass</p>
+                            <div class="progress" style="height: 25px;">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 60%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">60%</div>
+                            </div>
+                        <p class="prog-skill">Pug (Jade)</p>
+                            <div class="progress" style="height: 25px;">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 50%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">60%</div>
+                            </div>
+                        <p class="prog-skill">ExpressJs</p>
+                            <div class="progress" style="height: 25px;">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 40%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">40%</div>
+                            </div>
+                </div>
+                <div class="col-md-4">
+                    <h3>Others</h3>
+                        <p class="prog-skill">Agile Methodology</p>
+                            <div class="progress" style="height: 25px;">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 80%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">80%</div>
+                            </div>
+                        <p class="prog-skill">Scrum</p>
+                            <div class="progress" style="height: 25px;">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 70%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">70%</div>
+                            </div>
+                        <p class="prog-skill">Business Analyst</p>
+                            <div class="progress" style="height: 25px;">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 90%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">90%</div>
+                            </div>
+                        <p class="prog-skill">Git</p>
+                            <div class="progress" style="height: 25px;">
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 90%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">90%</div>
+                            </div>
+                </div>
+            </div>
+        </section>
 
         <!-- Projects Section -->
         <section class="projects section">
