--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="preload" href="./css/main.css" as="style">
     <link rel="preload" href="./libs/fullpage.js/dist/fullpage.min.css" as="style">
-    <link rel=preload href="./libs/@fortawesome/fontawesome-free/css/all.css" as="style">
+    <link rel="preload" href="./libs/@fortawesome/fontawesome-free/css/all.min.css" as="style">
     <link rel="stylesheet" href="./libs/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./libs/@fortawesome/fontawesome-free/css/all.css">
     <link rel="stylesheet" href="./css/main.css">
