--- a/index.html
+++ b/index.html
@@ -132,11 +132,15 @@
                     </div>
                     <div  class="col-md-3 project">      
                             <div class="proj-details">     
-                                <h5>SinglePage with routing</h5>
+                                <h5>Single Page App with routing</h5>
                                 <a href="https://github.com/clirimajeti" class="icon-proj" target="_blank">
                                     <span>SourceCode</span>  
                                     <i class="fas fa-code"></i>
-                                </a> 
+                                </a>
+                                <a href="https://clirimajeti.github.io/SPA-Template/" class="icon-proj" target="_blank">
+                                    <span>Live Preview</span>
+                                    <i class="fas fa-globe"></i>
+                                </a>   
                             </div>      
                     </div>
                
