--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 </head>
 <body>
     <header class="container">
-        <span style="color:white;font-size:32px;position: absolute;top:20px;left:30px;"><i class="fas fa-bars"></i></span>
+        <!-- <span style="color:white;font-size:32px;position: absolute;top:20px;left:30px;"><i class="fas fa-bars"></i></span> -->
         <nav id="menu">
             <div class="menu-item"><a href="#s1">Home</a></div>
             <div class="menu-item"><a href="#s2">Skills</a></div>
             <div class="menu-item"><a href="#s3">Projects</a></div>
             <div class="menu-item"><a href="#s4">Contact</a></div>     
         </nav>
-        <div class="toggle" style="position:absolute;top:15px;right:15px;"><div class="ball"></div></div>
+        <!-- <div class="toggle" style="position:absolute;top:15px;right:15px;"><div class="ball"></div></div> -->
     </header>        
     <div class="container content">
         <!-- Intro -->
